repositry, service, controller movie_directors
