# entity/domain/movie_directors_models..go
@@ -1,0 +1,6 @@
+package domain
+
+type MovieDirector struct {
+	Movie     Movie      `json:"movie"`
+	Directors []Director `json:"directors"`
+}
